--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
         <meta name="viewport" content="width=device-width">
+        <title>BASIC LAYOUT </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -44,16 +45,16 @@
                 </div>
                 <div class="last">
                     <div class="box1">
-                        <img src="C:\Users\Tringapps-User8\Downloads\download.jpg" style="width:100%;height:100%">
+                        <img src="C:\Users\Tringapps-User8\Downloads\download.jpg" style="width:100%;height:100%" alt="car1">
                     </div>
                     <div class="box2">
-                        <img src="C:\Users\Tringapps-User8\Downloads\images.jpg"  style="width:100%;height:100%">
+                        <img src="C:\Users\Tringapps-User8\Downloads\images.jpg"  style="width:100%;height:100%" alt="car2">
                     </div>
                     <div class="box3">
-                        <img src="C:\Users\Tringapps-User8\Downloads\car1.jpg"  style="width:100%;height:100%">
+                        <img src="C:\Users\Tringapps-User8\Downloads\car1.jpg"  style="width:100%;height:100%" alt="car3">
                     </div>
                      <div class="box4">
-                        <img src="C:\Users\Tringapps-User8\Downloads\car3.jpg"  style="width:100%;height:100%">
+                        <img src="C:\Users\Tringapps-User8\Downloads\car3.jpg"  style="width:100%;height:100%" alt="car4">
                      </div>
                 </div>
                 <div class="footer">
