--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Free Web tutorials">
         <meta name="viewport" content="width=device-width">
         <title>BASIC LAYOUT </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Assignment1.css">
     </head>
     <body>
         <div class="main">
             <div class="container">
-                <div class="para1">KANNAN CAR DEALER AND SERVICE</div>
-                <div class="para2">
+                <div class="header">KANNAN CAR DEALER AND SERVICE</div>
+                <div class="nav">
                     <ul>
                         <li><a>HOME</a></li>
                         
@@ -25,14 +24,14 @@
                     </ul>
                 </div>
                 <div class="para3">
-                    <div class="para31">
+                    <div class="section">
                         <ul>
                             <li>A one-stop shop for all your dreams to come true; we provide both end-users and business-to-business clients. We offer our clients complete service from top to bottom to ensure better customer satisfaction.We also provide our clients with aftersales services such as exporting, mechanical, car detailing, and all the other requirements from our clients</li>
                             <li>Providing Quality, Reliable and Cost-effective Car Services is the main focus of Top Car Service.</li>
                             <li>Providing Quality, Reliable and Cost-effective Car Services is the main focus of Top Car Service.We are changing the way of car maintenance trends throughout Gurgaon NCR which by providing access of various car services under one roof.</li>
                         </ul>
                     </div>
-                    <div class="para32">
+                    <div class="aside">
                         <h1>PRODUCTS</h1>
                         <ul>
                             <li><a href="https://www.justdial.com/Chennai/Kannan-Four-Wheeler-Second-Hand-Sales-Near-Ampa-Skywalk-Aminjikarai/044PXX44-XX44-180811154158-Q5N6_BZDET">Mahindra</a></li>
@@ -45,16 +44,16 @@
                 </div>
                 <div class="last">
                     <div class="box1">
-                        <img src="C:\Users\Tringapps-User8\Downloads\download.jpg" style="width:100%;height:100%" alt="car1">
+                        <img src="C:\Users\Tringapps-User8\Downloads\download.jpg" class="car" alt="car1">
                     </div>
                     <div class="box2">
-                        <img src="C:\Users\Tringapps-User8\Downloads\images.jpg"  style="width:100%;height:100%" alt="car2">
+                        <img src="C:\Users\Tringapps-User8\Downloads\images.jpg"  class="car" alt="car2">
                     </div>
                     <div class="box3">
-                        <img src="C:\Users\Tringapps-User8\Downloads\car1.jpg"  style="width:100%;height:100%" alt="car3">
+                        <img src="C:\Users\Tringapps-User8\Downloads\car1.jpg"  class="car" alt="car3">
                     </div>
                      <div class="box4">
-                        <img src="C:\Users\Tringapps-User8\Downloads\car3.jpg"  style="width:100%;height:100%" alt="car4">
+                        <img src="C:\Users\Tringapps-User8\Downloads\car3.jpg" class="car" alt="car4">
                      </div>
                 </div>
                 <div class="footer">
